Removed citation from the related work section not strictly necessary

--- a/introduction.tex
+++ b/introduction.tex
@@ -39,7 +39,7 @@ For all these indices the following meteorological parameters are important:
 Based on the availability of data, in this paper we will use \citeauthor{Steadman1979}'s heat index \parencite{Steadman1979} and, as a simple comparison measure, the air temperature. To compute an approximated equivalent temperature of the heat index we use the formula published by \textcite[77]{Stull2011}.  
 
 \subsubsection{Environmental Dependent Routing}
-Several research projects have considered environmental factors for pedestrian routing in the paste. The AffectRoute routing algorithm proposed by \textcite{Huang2014} for instance takes the affective responses to the environment into account, e.g. to find a route that a person considers safer.  \textcite{Sharker2012} are proposing a method to find a health optimal route, considering several environmental factors like complexity of the walking trail (slope etc.) and weather (only “Good”, “Fair” or “Bad”). A method to find a route with a minimal pollution exposure has been proposed by \textcite{Hasenfratz2015} in his PhD thesis.
+Several research projects have considered environmental factors for pedestrian routing in the paste. For instance, \textcite{Sharker2012} are proposing a method to find a health optimal route, considering several environmental factors like complexity of the walking trail (slope etc.) and weather (only “Good”, “Fair” or “Bad”). A method to find a route with a minimal pollution exposure has been proposed by \textcite{Hasenfratz2015} in his PhD thesis.
 
 The NaviComf framework for pedestrian routing proposed by \textcite{Dang2013}, enables to improve the comfort considering environmental factors varying over time. The proposed framework uses a multi-factor cost model for the evaluation of the route and enables them to consider heterogeneous environmental information from multi-modal sensors like air temperature and humidity. To find a optimal route \textcite{Dang2013} are proposing three different algorithms,  a bounded depth-first search algorithm, an adjustable dynamic planning algorithm and a heuristic particle planning algorithm. As a sample application, the authors implemented a routing app for thermal comfort navigation. The meteorological used for this sample application have been collected using a network of 40 micro-climate sensor nodes which detected air temperature and relative humidity. 
 
