--- a/paper.tex
+++ b/paper.tex
@@ -13,6 +13,7 @@
 \usepackage{graphicx}
 \usepackage{subfigure}
 \usepackage{paralist}
+\usepackage{afterpage}
 
 \usepackage{csquotes}
 \usepackage[style=authoryear,backend=biber]{biblatex} 
